# coq-tinyram

./: .envrc  .gitignore  CHANGELOG.md  CODEOWNERS  README.md  _CoqProject  coq-tinyram.cabal  dune-project  flake.nix
examples/: bitand.c  bitand.v  factwhile.c  factwhile.v  polynomial_in_main.c  polynomial_in_main.v
nix/: coq.nix
nix/doom.d/: config.el  init.el  packages.el
scratch/: em.py  scratch.v
src/: Main.hs  README.md  Tinyram_VM.hs  coq-tinyram.cabal  coq-tinyram.opam  dune-project
src/src/: Main.hs
src/theories/: Extraction.v  FibExample.v  README.md
src/theories/Machine/: Denotations.v  Handlers.v  InstructionTheorems.v  Memory.v
src/theories/Utils/: Arith.v  BitVectors.v
src/tinyram_programs/: add_16_4.tr  fib_16_4.tr
src/tinyram_programs/add/: main.tape
src/tinyram_programs/fib/: main.tape
theories/: Asm.v  ExamplePrograms.v  Extraction.v  FibExample.v  Instructions.v  README.md  Types.v  dune
theories/CopyingMorgan/: CMTypes.v  Compile.v  Instructions.v
theories/Machine/: Coding.v  DecodeOps.v  Denotations.v  Handlers.v  ITrees.v  InstructionTheorems.v  Memory.v  Parameters.v  PureOpcodes.v  Words.v
theories/Opcodes/: Decoding.v
theories/Redo/: ReTypes.v  Vectors.v
theories/Utils/: Arith.v  BitVectors.v  CatSwap4.v  Fin.v  KTreeFin.v  MonadAux.v  Tactics.v  Vectors.v
theories/VN/: Combinators.v  Denote.v  Exec.v  Interp.v  README.md
